2006-04-28 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/pic/libdev/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/gbz80/Makefile.in,
	* device/lib/z80/Makefile.in,
	* device/lib/ds390/Makefile.in,
	* device/lib/ds400/Makefile.in: added srcdir to include search path,
	thanks to Borut for the bug report
	* configure.in,
	* configure: always create doc/Makefile independent from --enable-doc
	* Makefile.in: always install from directory doc independent from
	--enable-doc
	* device/lib/pic/Makefile.in: added libdev again, it was erroneously
	removed
	* device/lib/pic/libdev/Makefile.in: fixed VPATH build
	* doc/Makefile.in: install *.txt if present
	* device/include/Makefile.in (install): added installation of pic/*.inc
	and pic/*.txt files again, they were erroneously removed

2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic/{gen.c,main.h,pcode.c},
	* src/pic16/{gen.c,pcode.c}: quietened compiler warnings
	    concerning signedness with casts

2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genFunction): set global pic14_hasInterrupt on
	    definition of an interrupt handler,
	* src/pic/glue.c (pic14_emitInterruptHandler): moved output of
	    interrupt handler stuff from picglue() to separate routine,
	  (picglue): enabled definition of intr handlers in files w/o main()

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/librarian/sdcclib.c: moved include <limits.h> up to enable
	  compilation with MSVC 2005 Express Edition (VC8)

2006-04-26 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/Makefile: fixed build of gbz80 lib

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-460010.c,
	* support/regression/tests/bug-524691.c,
	* support/regression/tests/bug-716242.c: removed conditional defines
	  that are already in testfwk.h

2006-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (AccAXRrl1, AccAXLrl1): changed to real rotate by 1,